--- a/ERPWeb/Views/AgroConfiguration/GetStockiestList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetStockiestList.cshtml
@@ -5,90 +5,69 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row">
+<div class="row" style="margin-top:-10px">
     <div class="col-md-12">
-        <div class="card card-primary card-outline card-tabs" style="margin-top:-20px">
 
-            <div class="card-header p-0 pt-1 border-bottom-0">
-                <ul class="nav nav-tabs" role="tablist">
-                    <li class="nav-item">
-                        <a class="nav-link active" id="custom-tabs-StockiestInfoList-tab" data-toggle="pill" role="tab" aria-selected="true" href="#custom-tabs-StockiestInfoList" aria-controls="custom-tabs-StockiestInfoList">StockiestInfo List</a>
-                    </li>
-                </ul>
-            </div>
 
-            <div class="card-body">
-                <div class="tab-content" id="custom-tabs-two-tabContent">
-                    @Html.AntiForgeryToken()
-                    <div class="tab-pane fade show active" id="custom-tabs-StockiestInfoList" aria-labelledby="custom-tabs-StockiestInfoList-tab" role="tabpanel">
+        <div class="row" style="margin-top:-15px">
+            <div class="col-md-12">
+                <div class="card card-navy">
+                    <div class="card-header">
                         <div class="row">
-                            <div class="col-md-12">
-                                <div class="card card-gray-dark">
-                                    <div class="card-header">
-                                        <div class="row">
-                                            <div class="col-md-3">
-                                            </div>
-                                            <div class="col-md-6">
-                                                <h4 class="text-center text-bold">Stockiest List</h4>
-                                            </div>
-                                            <div class="col-md-3">
-                                                <a href="/AgroConfiguration/CreateStockiestList" class="btn btn-outline-primary btn-sm float-lg-right" id="createButton"><i class="fa fa-plus"></i> Create New Stockiest</a>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                </div>
+                            <div class="col-md-3">
                             </div>
-
+                            <div class="col-md-6">
+                                <h4 class="text-center text-bold">Stockiest List</h4>
+                            </div>
+                            <div class="col-md-3">
+                                <a href="/AgroConfiguration/CreateStockiestList" class="btn btn-outline-warning btn-sm float-lg-right" id="createButton"><i class="fa fa-plus"></i> Create New Stockiest</a>
+                            </div>
                         </div>
-
-                        <div class="row">
-                            <div class="col-md-12" style="margin-top:-5px">
-                                <div class="card card-navy">
-                                    <div class="card-header">
-                                        <h4 class="card-title">Search By</h4>
-                                    </div>
-
-                                    <div class="card-body text-sm">
-                                        <div class="row" style="margin-top:-15px">
-                                            <div class="col-md-3">
-                                                <label for="ddlStockiestName" class="control-label">Stockiest Name</label>
-                                                @Html.DropDownList("ddlStockiestName", (IEnumerable<SelectListItem>)ViewBag.ddlStockiestName, "--Select Stockiest--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
-
-                                            </div>
-
-                                            <div class="col-md-3">
-                                                <label for="ddlTerritoryName" class="control-label">Territory Name</label>
-                                                @Html.DropDownList("ddlTerritoryName1", (IEnumerable<SelectListItem>)ViewBag.ddlTerritoryName, "--Select Territory--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
-
-                                            </div>
-
-
-
-                                        </div>
-
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-md-12" style="margin-top:-10px">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <div class="col-md-12" id="dataContainer">
-
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div>
-
                     </div>
+
                 </div>
             </div>
 
-
         </div>
+
+        <div class="row" style="margin-top:-10px">
+            <div class="col-md-12">
+                <div class="card card-gray-dark">
+                    <div class="card-header">
+                        <div class="row justify-content-center">
+                            <div class="col-md-2">
+                                <h5 class="text-center">Search By</h5>
+                            </div>
+
+                            <div class="col-md-2">
+
+                                @Html.DropDownList("ddlStockiestName", (IEnumerable<SelectListItem>)ViewBag.ddlStockiestName, "--Select Stockiest--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+                            </div>
+                            <div class="col-md-2">
+
+
+                                @Html.DropDownList("ddlTerritoryName1", (IEnumerable<SelectListItem>)ViewBag.ddlTerritoryName, "--Select Territory--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12" style="margin-top:-10px">
+                <div class="card ">
+                    <div class="card-body">
+                        <div class="col-md-12" id="dataContainer">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
     </div>
 
 </div>
@@ -218,7 +197,7 @@
                     console.log(status);
                     if (res == true) {
                         message("#msg1", "#StockiestModal");
-                        
+
                     }
                     else {
                         message("#msg2");
